--- a/ZhihuColumn/app/src/main/res/layout/fragment_top_stories.xml
+++ b/ZhihuColumn/app/src/main/res/layout/fragment_top_stories.xml
@@ -1,4 +1,4 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,64 +6,64 @@
     android:fitsSystemWindows="true"
     tools:context="com.amazingokc.zhihucolumn.main.StoriesFragment">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/main.appbar"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/main.appbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="210dp"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/main.collapsing"
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <!--<android.support.design.widget.CollapsingToolbarLayout-->
+            <!--android:id="@+id/main.collapsing"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="210dp"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--app:contentScrim="?attr/colorPrimary"-->
+            <!--app:expandedTitleMarginEnd="64dp"-->
+            <!--app:expandedTitleMarginStart="48dp"-->
+            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewpager"
-                android:layout_width="match_parent"
-                app:layout_collapseMode="parallax"
-                android:layout_height="210dp" />
+            <!--<android.support.v4.view.ViewPager-->
+                <!--android:id="@+id/viewpager"-->
+                <!--android:layout_width="match_parent"-->
+                <!--app:layout_collapseMode="parallax"-->
+                <!--android:layout_height="210dp" />-->
 
-            <com.amazingokc.zhihucolumn.view.CirclePageIndicator
-                app:layout_collapseMode="parallax"
-                android:id="@+id/indicator"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:visibility="visible"
-                app:fillColor="@color/colorWhite"
-                app:pageColor="@color/colorCirclePageIndicatorpageColor"
-                app:radius="5dp"
-                app:strokeColor="@color/colorCirclePageIndicatorpageColor"
-                app:strokeWidth="0dp" />
+            <!--<com.amazingokc.zhihucolumn.view.CirclePageIndicator-->
+                <!--app:layout_collapseMode="parallax"-->
+                <!--android:id="@+id/indicator"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="20dp"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_marginLeft="8dp"-->
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:paddingLeft="4dp"-->
+                <!--android:paddingRight="4dp"-->
+                <!--android:visibility="visible"-->
+                <!--app:fillColor="@color/colorWhite"-->
+                <!--app:pageColor="@color/colorCirclePageIndicatorpageColor"-->
+                <!--app:radius="5dp"-->
+                <!--app:strokeColor="@color/colorCirclePageIndicatorpageColor"-->
+                <!--app:strokeWidth="0dp" />-->
 
-            <!--<android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
+            <!--&lt;!&ndash;<android.support.v7.widget.Toolbar-->
+                <!--android:id="@+id/toolbar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--app:layout_collapseMode="pin"-->
+                <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />&ndash;&gt;-->
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
 
 
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcview_stories"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/rcview_stories"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
